<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_message"
        android:id="@+id/tvWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:textCursorDrawable="@null"
        android:id="@+id/welcomeEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sickday_blue"
        android:hint="@string/profilebuilder_email"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_centerVertical="true"
        />

    <EditText
        android:textCursorDrawable="@null"
        android:id="@+id/loginPopupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeEmail"
        android:layout_margin="10dp"
        android:background="@color/sickday_blue"
        android:hint="@string/profulebuilder_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <TextView
        android:id="@+id/tvIncorrectLogin"
        android:textColor="@color/sickday_red"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_login"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_below="@+id/loginPopupPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/registerButton"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:background="@color/sickday_blue"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/loginButton"
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:background="@color/sickday_blue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>