<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:textColor="@color/font_color_blue"
        android:id="@+id/tvLocationNotSupported"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/location_not_supported"
        android:textAppearance="@android:style/TextAppearance.Large" />
    <Button
        android:id="@+id/bConfirmLocationRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sickday_blue"
        android:text="@string/request_location"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/bCancelLocationRequest"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sickday_blue"
        android:text="@string/cancel"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white" />
</LinearLayout>