<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvLoginPopupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/login_popup_text"
        android:textAppearance="@android:style/TextAppearance.Medium" />


    <EditText
        android:id="@+id/loginPopupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginPopupText"
        android:layout_margin="10dp"
        android:background="@color/sickday_blue"
        android:hint="@string/profulebuilder_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textCursorDrawable="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/loginPopupPassword">

        <Button
            android:layout_weight="1"
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sickday_blue"
            android:text="@string/cancel"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/white" />

        <Button
            android:layout_weight="1"
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sickday_blue"
            android:text="@string/log_in"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/white" />


    </LinearLayout>
</RelativeLayout>