<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/tvAreYouSureLogOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirm_logoff"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAreYouSureLogOff"
        android:orientation="vertical"
        >
        <Button
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/white"
            android:background="@color/sickday_blue"
            android:text="@string/yes_logoff"
            android:id="@+id/bConfirmLogOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_marginTop="2dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/white"
            android:background="@color/sickday_blue"
            android:id="@+id/bCanelLogOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />


    </LinearLayout>


</RelativeLayout>