<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/font_color_blue"
        android:layout_margin="10dp"
        android:id="@+id/tvAreYouSure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure_911"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAreYouSure"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/white"
            android:background="@color/sickday_blue"
            android:id="@+id/bCanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
        <Button
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@android:color/white"
            android:background="@color/sickday_blue"
            android:text="@string/yes_sure"
            android:id="@+id/bSure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


</RelativeLayout>