<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:id="@+id/formscrollview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profilebuilderintro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/profilebuilder_intro"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/formFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profilebuilderintro1"
                android:layout_margin="10dp"
                android:background="@color/sickday_blue"
                android:hint="@string/profilebuilder_first_name"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/formLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formFirstName"
                android:layout_margin="10dp"
                android:background="@color/sickday_blue"
                android:hint="@string/profilebuilder_last_name"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:textCursorDrawable="@null"
                android:id="@+id/formDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formPhoneNumber"
                android:layout_margin="10dp"
                android:background="@color/sickday_blue"
                android:text="Date of Birth MM/DD/YYYY"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/formPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formLastName"
                android:layout_margin="10dp"
                android:background="@color/sickday_blue"
                android:hint="@string/profilebuilder_phonenumber"
                android:padding="10dp"
                android:inputType="phone"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/formEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formDOB"
                android:layout_margin="10dp"
                android:background="@color/sickday_blue"
                android:hint="@string/profilebuilder_email"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/formPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/formEmail"
                android:layout_margin="10dp"
                android:background="@color/sickday_blue"
                android:hint="@string/profulebuilder_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <eventhorizon.sickday.AutoResizeTextView
                android:id="@+id/bHomeAddress"
                android:layout_below="@+id/formPassword"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:background="@color/sickday_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Home Address"/>

            <eventhorizon.sickday.AutoResizeTextView
                android:id="@+id/bWorkAddress"
                android:layout_below="@+id/bHomeAddress"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:background="@color/sickday_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Work Address"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>