<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvFirstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/profilebuilder_first_name"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/etInsuranceInformationFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sickday_blue"
                android:hint="@string/profilebuilder_first_name"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_below="@+id/tvFirstNameLabel" />

            <TextView
                android:id="@+id/tvLastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/etInsuranceInformationFirstName"
                android:text="@string/profilebuilder_last_name"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/etInsuranceInformationLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sickday_blue"
                android:hint="@string/profilebuilder_last_name"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_below="@+id/tvLastNameLabel" />

            <TextView
                android:id="@+id/tvPhoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/etInsuranceInformationLastName"
                android:text="@string/profilebuilder_phonenumber"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText
                android:textCursorDrawable="@null"
                android:id="@+id/etInsuranceInformationPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sickday_blue"
                android:hint="@string/profilebuilder_phonenumber"
                android:inputType="phone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_below="@+id/tvPhoneLabel" />

            <TextView
                android:id="@+id/tvDOBLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/etInsuranceInformationPhone"
                android:text="Date of Birth"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <EditText

                android:textCursorDrawable="@null"
                android:id="@+id/etInsuranceInformationDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sickday_blue"
                android:hint="MM/DD/YYYY"
                android:inputType="date"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_below="@+id/tvDOBLabel" />

            <eventhorizon.sickday.AutoResizeTextView
                android:id="@+id/bHomeAddressEdit"
                android:layout_below="@+id/etInsuranceInformationDOB"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/sickday_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit Home Address"/>

            <eventhorizon.sickday.AutoResizeTextView
                android:id="@+id/bWorkAddressEdit"
                android:layout_below="@+id/bHomeAddressEdit"
                android:gravity="center"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/sickday_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit Work Address"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>